--- a/2022TaskB/Problem_2.ipynb
+++ b/2022TaskB/Problem_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,151 +12,177 @@
     "from sklearn import linear_model\n",
     "import time\n",
     "import random\n",
-    "import copy\n"
+    "import copy\n",
+    "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 514,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7420"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 现在要对5个州做一个总的用水用电的水分配方案（分别给多少水，给多少电 -> 存多少水）\n",
-    "# ai = 5个州的分别的总用水需求，bi = 5个州分别的用电需求 -> 转化为5个州的存水需求 wi\n",
-    "# 求最优的ai、wi，再计算得到最优的ai、bi\n",
+    "# a = 5个州的分别的总用水需求，b = 5个州分别的用电需求 -> 转化为5个州的存水需求 w\n",
+    "# 求最优的a、w，再计算得到最优的a、b\n",
     "# 最优的评判：满足总和小于等于 M_v + P_v 的前提下，得分score()最高\n",
-    "# Ai = 实际总用水， Bi = 实际总用电\n",
-    "# (2015 data)\n",
-    "M_v = 4207.6251\n",
-    "P_v = 3212.9429\n",
-    "N = int(M_v + P_v)\n",
-    "Ai = eval(\"\"\"[4632.39\n",
+    "# A = 5州分别实际总用水， B = 5州分别实际总用电\n",
+    "# (2019 data)\n",
+    "M_v = 4207.6251 - 0.402866840525917\n",
+    "P_v = 3212.9429 - 192.830940038404\n",
+    "N = int((M_v*1e4 + P_v*1e4)/166.0947)\n",
+    "bitlength = N.bit_length()\n",
+    "A = eval(\"\"\"[4632.39\n",
     "20171.5\n",
     "7849.86\n",
     "2203.23\n",
     "9412.49]\"\"\".replace('\\n', ','))\n",
-    "Bi = eval(\"\"\"316.5298945\n",
+    "B = eval(\"\"\"316.5298945\n",
     "480.7151231\n",
     "147.2743259\n",
     "94.57796014\n",
     "151.905041\"\"\".replace('\\n', ','))\n",
-    "Ai, Bi = np.array(Ai), np.array(Bi)\n",
-    "Ai = Ai / 1e3\n",
-    "Bi = Bi / 365\n",
-    "N"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 因为目前只有两个水坝分别的水电转换的关系式，应该需要再拟合一个总的：y = 0.0010x + 26.2830\n",
-    "def w2e(x): return 0.0010 * x + 26.2830\n",
-    "def e2w(y): return (y - 26.2830) / 0.0010\n",
+    "A, B = np.array(A), np.array(B)\n",
+    "A = A / 1e3 * 1e4\n",
+    "B = B / 365\n",
     "\n",
-    "m=1\n",
-    "def score(a, a_prime, m):\n",
-    "    return m / a_prime - m / a\n"
+    "N_GENERATIONS=10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.86720519 1.31702773 0.4034913  0.2591177  0.41617819] [-25415.79480959 -24965.97226548 -25879.50869616 -26023.88230099\n",
-      " -25866.82180548]\n",
-      "[ 4.63239    20.1715      7.84986     2.20323     9.41249     0.86720519\n",
-      "  1.31702773  0.4034913   0.2591177   0.41617819]\n"
+      "the corresponding water storage to meet elec requirement is 313.7679698096622\n",
+      "[  4.63239     20.1715       7.84986      2.20323      9.41249\n",
+      "  83.38937604 126.64375424  38.79922357  24.91643671  40.01917925]\n",
+      "44.6767\n",
+      "358.03743980966215\n"
      ]
     }
    ],
    "source": [
-    "print(Bi, e2w(Bi))\n",
-    "Ai = np.append(Ai, Bi)\n",
+    "# 因为目前只有两个水坝分别的水电转换的关系式，应该需要再拟合一个总的： y = 9.6416 * lnx + -52.1632\n",
+    "def w2e(x): return 9.6416 * np.log(x) + -52.1632\n",
+    "def e2w(y): return np.exp((y + 52.1632) / 9.6416)\n",
+    "print(\"the corresponding water storage to meet elec requirement is\", e2w(np.sum(B)))\n",
+    "ratio = B/sum(B)\n",
+    "a_prime = np.append(A, e2w(np.sum(B)) * 1e4 * ratio)\n",
+    "print(a_prime/1e4)\n",
+    "print(N / 1e4)\n",
+    "print(sum(a_prime)/1e4)\n",
+    "m=1\n",
+    "def score(ai, a_primei, m):\n",
+    "    value = m / a_primei - m / ai\n",
+    "    return value\n",
     "\n",
-    "print(Ai)\n"
+    "def evaluate(a, a_prime, m):\n",
+    "    product = 0\n",
+    "    for i in range(len(a)):\n",
+    "        product = product + score(a[i], a_prime[i], m)\n",
+    "    return product / len(a)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_random():\n",
     "    x, tmp = [], []\n",
-    "    for i in range(9):\n",
-    "        ran = random.randint(0, N)\n",
-    "        if ran not in tmp and ran != 0 and ran != N:\n",
-    "            tmp.append(ran)\n",
+    "    while len(tmp) < 9:\n",
+    "        r = random.randint(0, N)\n",
+    "        if r not in tmp and r != 0 and r != N:\n",
+    "            tmp.append(r)\n",
+    "    tmp.sort()\n",
     "    x.append(tmp[0])\n",
     "    for i in range(1, 9):\n",
     "        x.append(tmp[i]-tmp[i-1])\n",
-    "    x.append()\n",
+    "    x.append(N-tmp[-1])\n",
     "    return x\n",
     "\n",
     "def swap(x):\n",
-    "    new_x = [] * len(x)\n",
-    "    x2 = copy.copy(x)\n",
-    "    np.random.shuffle(x)\n",
+    "    new_x = copy.copy(x)\n",
+    "    x_copy = copy.copy(x)\n",
+    "    x = list(x)\n",
+    "    np.random.shuffle(x_copy)\n",
     "    bitlength = N.bit_length()\n",
-    "    for i in range(0, len(x)-1, 2):\n",
-    "        s = random.randint(0, bitlength)\n",
-    "        new_x[x2.index(x[i])] = bin(x[i])[2:].zfill(bitlength)[:s] + bin(x[i+1])[2:].zfill(bitlength)[s:]\n",
-    "        new_x[x2.index(x[i+1])] = bin(x[i+1])[2:].zfill(bitlength)[:s] + bin(x[i])[2:].zfill(bitlength)[s:]\n"
+    "    s = random.randint(0, bitlength-1)\n",
+    "    new_x[x.index(x_copy[0])] = int((bin(x_copy[0])[2:]).zfill(bitlength)[:s] + bin(x_copy[1])[2:].zfill(bitlength)[s:],2)\n",
+    "    new_x[x.index(x_copy[1])] = int(bin(x_copy[1])[2:].zfill(bitlength)[:s] + bin(x_copy[0])[2:].zfill(bitlength)[s:],2)\n",
+    "    return new_x\n",
+    "\n",
+    "def mutation(x):\n",
+    "    new_x = copy.copy(x)\n",
+    "    x_copy = copy.copy(x)\n",
+    "    ridx = random.randint(0, len(x_copy)-1)\n",
+    "    r = random.randint(0, bitlength-1)\n",
+    "    x_copy_bin = (bin(x_copy[ridx])[2:]).zfill(bitlength)\n",
+    "    x_copy_bin = x_copy_bin[:r] + str((int(x_copy_bin[r])+1) % 2) + x_copy_bin[r+1:]\n",
+    "    new_x[ridx] = int(x_copy_bin, 2)\n",
+    "    return new_x\n",
+    "\n",
+    "def legal(x):\n",
+    "    if 0 in x:\n",
+    "        return False\n",
+    "    s = sum(x)\n",
+    "    if s > N:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3708, 4977, 2726, 915, 4060, 6979, 6978, 2670, 4488]\n",
-      "1101101000011 1101101000010\n",
-      "1101101000010 1101101000011\n",
-      "0001110010011 1000110001000\n",
-      "0001110011000 1000110000011\n",
-      "1001101110001 0111111011100\n",
-      "1001101011100 0111111110001\n",
-      "0111001111100 0101010100110\n",
-      "0111010100110 0101001111100\n"
+      "[3.9802 4.1536 3.6863 6.5536 3.9802 3.6863 6.5536 3.891  3.2767 4.9152] -0.1292864635735624\n",
+      "[-0.03537236719497889, -0.1911801124311265, -0.14388391293904587, 0.30129118691116286, -0.1450018433573778, -0.2592827846349375, -0.14469172546459316, -0.2312296294076371, -0.2650509450967298, -0.17846250212036047]\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "x = init_random()\n",
-    "print(x)\n",
-    "swap(x)"
+    "best_score = -999999\n",
+    "best = []\n",
+    "next_x = init_random()\n",
+    "for _ in range(N_GENERATIONS):\n",
+    "    x = next_x\n",
+    "    x_score = evaluate(x, a_prime, m)\n",
+    "    if x_score > best_score:\n",
+    "        best_score = x_score\n",
+    "        best = x\n",
+    "    y = swap(x)\n",
+    "    if not legal(y):\n",
+    "        y = x\n",
+    "    y_score = evaluate(y, a_prime, m)\n",
+    "    if y_score > best_score:\n",
+    "        best_score = y_score\n",
+    "        best = y\n",
+    "    z = mutation(y)\n",
+    "    if not legal(z):\n",
+    "        z = y\n",
+    "    z_score = evaluate(z, a_prime, m)\n",
+    "    if z_score > best_score:\n",
+    "        best_score = z_score\n",
+    "        best = z\n",
+    "    next_x = best\n",
+    "best = np.array(best)\n",
+    "print(best/1e4, best_score * 1e4)\n",
+    "print([score(best[i], a_prime[i], m) * 1e4 for i in range(len(best))])\n",
+    "print(abs(np.sum(best) - N)/1e4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
