--- a/模型相关/优化模型.ipynb
+++ b/模型相关/优化模型.ipynb
@@ -880,7 +880,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "SILENT",
    "language": "python",
    "name": "python3"
   },
@@ -894,12 +894,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:41:22) [Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "19f09cf2eddec64482a34667392e5f7909b14c50127e00aaec2a5f5b7afabf58"
+    "hash": "33a00747c7c616a6e1f951908c7a8e16aa8bdee44e4bbac794a20c5a719e4c26"
    }
   }
  },
