--- a/2021TaskA/tmp2.ipynb
+++ b/2021TaskA/tmp2.ipynb
@@ -41,7 +41,7 @@
     "df_fungi_temperature_needed[\"species\"] = species\n",
     "df_fungi_temperature_needed[\"temp_c\"] = temp_c\n",
     "df_fungi_temperature_needed[\"hyphal_rate\"] = hyphal_rate\n",
-    "    \n",
+    "\n",
     "grouped = df_fungi_temperature_needed.groupby('species')\n",
     "df_fungi_temperature = pd.DataFrame()\n",
     "for name, group in grouped:\n",
@@ -113,7 +113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MCM",
+   "display_name": "SILENT",
    "language": "python",
    "name": "python3"
   },
@@ -127,12 +127,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "181b8fb9203699f20b7eea843003425aae98dff302c1e7b3981cf506273533e7"
+    "hash": "33a00747c7c616a6e1f951908c7a8e16aa8bdee44e4bbac794a20c5a719e4c26"
    }
   }
  },
