--- a/2022TaskB/Problem_2_3.ipynb
+++ b/2022TaskB/Problem_2_3.ipynb
@@ -299,7 +299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MCM",
+   "display_name": "SILENT",
    "language": "python",
    "name": "python3"
   },
@@ -313,12 +313,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "181b8fb9203699f20b7eea843003425aae98dff302c1e7b3981cf506273533e7"
+    "hash": "33a00747c7c616a6e1f951908c7a8e16aa8bdee44e4bbac794a20c5a719e4c26"
    }
   }
  },
