--- a/Past time exercises/2022TaskB/Problem_1.ipynb
+++ b/Past time exercises/2022TaskB/Problem_1.ipynb
@@ -125,7 +125,7 @@
     "    ### the type of X and Y should be np.array\n",
     "    a = Symbol('a')\n",
     "    b = Symbol('b')\n",
-    "    poly1 = a * np.sum(np.square(np.log(X))) + b * np.sum(np.log(X)) - np.sum(np.log(X) * Y) \n",
+    "    poly1 = a * np.sum(np.square(np.log(X))) + b * np.sum(np.log(X)) - np.sum(np.log(X) * Y)\n",
     "    poly2 = a * np.sum(np.log(X)) + b * len(X) - np.sum(Y)\n",
     "    a, b =  list(solve([poly1, poly2], [a, b]).values())[0], list(solve([poly1, poly2], [a, b]).values())[1]\n",
     "    return a, b\n"
@@ -611,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
